# pycid

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  MACID_codebase_demonstration.ipynb  NOTICE  PACKAGING.md  README.md  Requirements.txt  check-code.sh  cid.py  cpd.py  examples.py  examples2.py  generate.py  get_cpd.py  get_paths.py  get_right_paths.py  get_systems.py  incentives.py  macid.py  mypy.ini  parameterize.py  pyproject.toml  reasoning.py  setup.cfg  setup.py  statename.py  toms-cid-class.py  trial_code.py  verify_incentive.py
.github/: workflows
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code-check.yaml  publish.yaml
analyze/: control_incentitve_UNTESTED.py  d_reduction.py  direct_control_incentive.py  effects.py  get_paths.py  indirect_control_incentive.py  instrumental_control_incentive.py  other_control_incentitves_UNTESTED.py  reasoning_patterns.py  reasoning_patterns_UNTESTED.py  relevance_graph_UNTESTED.py  requisite_graph.py  requisite_observation_UNTESTED.py  response_incentive.py  response_incentive_UNTESTED.py  value_of_control.py  value_of_control_UNTESTED.py  value_of_information.py
core/: cid.py  cpd.py  get_paths.py  macid.py  macid_base.py  relevance_graph.py
examples/: MACID_codebase_demonstration.ipynb  analyze_incentives.ipynb  auto_parameterize.py  fairness.ipynb  generate.py  generate_cid.ipynb  nested_oi.py  random_cid.py  simple_cids.py  simple_macids.py  solve_cid.ipynb  solve_cpd.ipynb  story_cids.py  story_macids.py
export/: export_to_gambit_UNTESTED.py
generate/: get_paths.py  random_cid.py
models/: five_node.py  three_node.py  two_decisions.py
notebooks/: CBN_Tutorial.ipynb  CID Basics Tutorial.ipynb  CID_Basics_Tutorial.ipynb  CID_Incentives_Tutorial.ipynb  MACID_Basics_Tutorial.ipynb  MACID_codebase_demonstration.ipynb  PyCID basic example.ipynb  Reasoning_Patterns_Tutorial.ipynb  Untitled.ipynb  Untitled1.ipynb  Why_fair_labels_can_yield_unfair_predictions_AAAI_22.ipynb  Why_fair_labels_may_yield_unfair_models_AAAI_22.ipynb  analyze_incentives.ipynb  fairness.ipynb  generate_cid.ipynb  solve_cid.ipynb
parameterize/: generate.py  get_paths.py  get_systems.py  parameterize.py
pycid/: __init__.py
pycid/analyze/: __init__.py  effects.py  instrumental_control_incentive.py  reasoning_patterns.py  requisite_graph.py  response_incentive.py  value_of_control.py  value_of_information.py
pycid/core/: __init__.py  causal_bayesian_network.py  cid.py  cpd.py  get_paths.py  macid.py  macid_base.py  mechanised_graph.py  relevance_graph.py
pycid/examples/: generate.py  simple_cbns.py  simple_cids.py  simple_macids.py  story_cids.py  story_macids.py
pycid/export/: __init__.py  gambit.py
pycid/random/: __init__.py  random_cid.py  random_cpd.py  random_dag.py  random_macid.py  random_macidbase.py
test/: __init__.py  check-code.sh  lint-config.ini  run_all_tests.py  testNotebooks.py  test_analyze.py  test_cid.py  test_cpd.py  test_examples.py  test_generate.py  test_get_paths.py  test_incentives.py  test_macid.py  test_macid_base.py  test_notebooks.py  test_parameterize.py  test_parametrize.py  test_reasoning_patterns.py
tests/: check-code.sh  cid_test.py  test_analyze.py  test_causal_bayesian_network.py  test_cid.py  test_cpd.py  test_examples.py  test_export.py  test_get_paths.py  test_macid.py  test_macid_base.py  test_mechanised.py  test_notebooks.py  test_random.py  test_reasoning_patterns.py
