# Setuptools
# ----------
[metadata]
name = pycid
author = Causal Incentives Working Group
description = Causal Influence Diagram library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/causalincentives/pycid
license = Apache License 2.0
classifiers =
	Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
scripts =
install_requires =
	matplotlib
	networkx
	numpy
	pgmpy
setup_requires =

[options.extras_require]
# Additional test dependencies
test =
	flake8
	mypy
	nbconvert
	nbformat
	pep8-naming
	pytest
	ipykernel
notebook =
	ipykernel

[options.entry_points]
console_scripts =


# Other Tools
# -----------

[flake8]
application-import-names=pycid
import-order-style=google
# E401: Multiple imports on one line
# E402: Module level import not at top of file
# W605: Invalid escape sequence
# E203: Whitespace before ':'. Not required by PEP8, violated by Black
# W503: Line break before binary operator. PEP8 recommends the opposite now.
ignore = E203, E401, E402, W605, W503
max-line-length = 120
max-complexity = 15

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
follow_imports = skip
disallow_untyped_defs = True
ignore_missing_imports = True

[isort]
line_length=120
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
skip_glob=*/third_party/*
known_third_party=matplotlib,nbconvert,nbformat,networkx,numpy,pgmpy,setuptools

[tool:pytest]
# Don't show deprecation warning for dependencies
filterwarnings =
	ignore::DeprecationWarning
	default::DeprecationWarning:__main__
	default::DeprecationWarning:pycid
	ignore::PendingDeprecationWarning
	default::PendingDeprecationWarning:__main__
	default::PendingDeprecationWarning:pycid
