# Setuptools
# ----------
[metadata]
name = pycid
author = Causal Incentives Working Group
author_email = james.fox@keble.ox.ac.uk
description = Causal Influence Diagram library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/causalincentives/pycid
license = Apache License 2.0
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: Scientific/Engineering :: Artificial Intelligence
	Topic :: Scientific/Engineering :: Mathematics
	Topic :: Software Development :: Libraries


[options]
packages = find:
include_package_data = True
scripts =
python_requires = >=3.8
install_requires =
	matplotlib
	networkx
	numpy
	pgmpy==0.1.17
	nashpy
setup_requires = setuptools_scm

[options.extras_require]
# Additional test dependencies
test =
	flake8
	ipykernel
	mypy
	nbconvert
	nbformat
	pep8-naming
	pytest
notebook =
	ipykernel

[options.entry_points]
console_scripts =


# Other Tools
# -----------

[flake8]
application-import-names=pycid
import-order-style=google
# E203: Whitespace before ':'. Not required by PEP8, violated by Black
# W503: Line break before binary operator. PEP8 recommends the opposite now.
# Note: To fix W605 make the docstring a raw string by starting with r"""
ignore = E203, W503
max-line-length = 120
max-complexity = 15
exclude =
    migrations
    __pycache__
    manage.py
    settings.py
    env
    .env

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
follow_imports = skip
disallow_untyped_defs = True
ignore_missing_imports = True
exclude = build/

[isort]
line_length=120
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
skip_glob=*/third_party/*
known_third_party=matplotlib,nbconvert,nbformat,networkx,numpy,pgmpy,pytest,setuptools

[tool:pytest]
# Don't show deprecation warning for dependencies
filterwarnings =
	ignore::DeprecationWarning
	default::DeprecationWarning:__main__
	default::DeprecationWarning:pycid
	ignore::PendingDeprecationWarning
	default::PendingDeprecationWarning:__main__
	default::PendingDeprecationWarning:pycid
